fix: adjust header styles for better layout and alignment on medium screens

--- a/assets/scss/kokatat/header.scss
+++ b/assets/scss/kokatat/header.scss
@@ -7,13 +7,16 @@ header.header {
   z-index: zIndex("highest");
   margin-top: 0 !important;
   @include breakpoint("medium") {
-    height: 70px;
+    height: auto;
+    padding: 0;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: flex-start;
   }
   .content-container {
     width: 100%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
